<resources>
    <string name="app_name">Yo soy KOF</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="desc"></string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="bt_recover">¿Olvidaste tu contraseña?</string>
    <string name="bt_login">Login</string>
    <string name="bt_alert">Alerta</string>
    <string name="bt_cancel">Cancelar</string>
    <string name="bt_save">Guardar</string>
    <string name="bt_close">Cerrar</string>
    <string name="bt_send">Enviar</string>
    <string name="bt_acept">Aceptar</string>
    <string name="bt_done">Salir</string>
    <string name="bt_skip">Saltar</string>
    <string name="bt_next">Siguiente</string>
    <string name="bt_previous">Anterior</string>
    <string name="bt_start">Iniciar</string>
    <string name="bt_game_kof">Código KOF</string>
    <string name="bt_game_team">Equipa al Equipo</string>
    <string name="bt_game_products">Caza Productos</string>
    <string name="bt_game_order">Todo en Orden</string>
    <string name="bt_game_refrigerator">Reto Refri</string>
    <string name="bt_checklist_sell">Preventa</string>
    <string name="bt_checklist_storage">Bodega</string>
    <string name="bt_checklist_service">Autoservicio</string>
    <string name="bt_checklist_delivery">Reparto</string>
    <string name="bt_checklist_info">Información</string>
    <string name="bt_map_logbook">Feedback de la Visita</string>
    <string name="bt_map_game">Jugar</string>
    <string name="bt_map_library">Biblioteca</string>
    <string name="bt_map_profile">Perfil</string>
    <string name="bt_map_wall">Cuadro de Honor</string>
    <string name="bt_map_yammer">Yammer</string>
    <string name="bt_map_info">Día en la Operación</string>
    <string name="bt_map_checklist">Checklist</string>
    <string name="bt_map_feedback">Evaluación de la Clínica</string>
    <string name="bt_map_top10">Top Ten</string>
    <string name="bt_map_evaluation">Post Evaluación</string>
    <string name="bt_map_logout">Cerrar Sesión</string>
    <string name="bt_map_femsa">Embajadores en Acción</string>
    <string name="txt_profile_prize_1">Be in love</string>
    <string name="txt_profile_prize_2">Be bold</string>
    <string name="txt_profile_prize_3">Be aggresive</string>
    <string name="txt_profile_prize_4">Be peristent</string>
    <string name="txt_profile_prize_5">Be aware</string>
    <string name="txt_profile_prize_6">Be a realist</string>
    <string name="txt_profile_prize_7">Be first</string>
    <string name="txt_profile_prize_8">Be together</string>
    <string name="txt_profile_prize_9">Be on time</string>
    <string name="txt_profile_prize_10">Be proud</string>
    <string name="bt_info_instructions">Instrucciones Básicas</string>
    <string name="bt_info_maps">Mapas / Direcciones</string>
    <string name="bt_info_checklist">Checklist</string>
    <string name="bt_info_operating_unit">Unidad Operativa</string>
    <string name="bt_select_camera">Desde la cámara</string>
    <string name="bt_select_photo">Desde la galería</string>
    <string name="bt_delete_photo">Eliminar foto</string>
    <string name="txt_username">GEID</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_select_option">Selecciona una opción</string>
    <string name="txt_error">Error</string>
    <string name="txt_thanks">Gracias</string>
    <string name="txt_sending">Enviando</string>
    <string name="txt_updating">Actualizando</string>
    <string name="txt_alert">¡Advertencia!</string>
    <string name="txt_alert_close_session">¿Deseas cerrar tu sesión?</string>
    <string name="txt_comments">Comentarios</string>
    <string name="txt_skills">Skills</string>
    <string name="txt_prizes">Premios</string>
    <string name="txt_notes">Notas</string>
    <string name="txt_instructions">Instrucciones</string>
    <string name="txt_instructions_desc">Te pedimos tu retroalimentación y sugerencias de mejora para los responsables de la unidad operativa que visitaste:</string>
    <string name="txt_time">01:00</string>
    <string name="txt_lines">-------</string>
    <string name="txt_finished">Finalizado</string>
    <string name="txt_getting_location">Obteniendo ubicación</string>
    <string name="txt_gps_alert">¡Tu GPS está deshabilitado! ¿Te gustaría activarlo?</string>
    <string name="txt_gps_activate">Habilitar GPS</string>
    <string name="error_username">El nombre de usuario debe tener al menos 1 caracter.</string>
    <string name="error_password">La contraseña debe tener al menos 1 caracter.</string>
    <string name="error_connectivity">No se encontró señal de internet.</string>
    <string name="txt_game_instructions_kof">Arrastra los conceptos que define la imagen con base a nuestro Lenguaje KOF</string>
    <string name="txt_game_instructions_team">Relaciona las imágenes con cada uno de los personajes del Equipo KOF</string>
    <string name="txt_game_instructions_products">Haz click en los productos que se indican en la parte superior derecha.</string>
    <string name="txt_game_instructions_order">En este juego realizarás dos actividades:\nActividad 1, haz click en los productos que deberás colocar para el armado de empaques\nActividad 2, has click en los empaques para el acomodo en el camión\n¡Tienes 3 minutos para hacer todos los puntos que puedas!</string>
    <string name="txt_game_instructions_refri">Demuestra que sabes el acomodo de los productos.\n¡Deja solo los productos que deben ir en el enfriador!</string>
    <string name="txt_gy_1">Croquis C.D. Coecillo</string>
    <string name="txt_gy_2">Croquis Cedis Norte</string>
    <string name="txt_gy_3">Croquis Cedis Sur</string>
    <string name="txt_gy_4">Croquis Chalco</string>
    <string name="txt_gy_5">Croquis Coacalco</string>
    <string name="txt_gy_6">Croquis Cuautitlán</string>
    <string name="txt_gy_7">Croquis Reyes</string>
    <string name="txt_gy_8">Croquis Texcoco</string>
    <string name="txt_gy_9">Croquis Tlalnepantla</string>
    <string name="txt_gy_10">Croquis Tlalpan</string>
    <string name="txt_gy_11">Croquis Zaragoza</string>
    <string name="txt_info_head_1">Unidad operativa</string>
    <string name="txt_info_head_2">Nombre</string>
    <string name="txt_info_head_3">Teléfono</string>
    <string name="txt_info_head_4">Extensión</string>
    <string name="txt_info_unity_1">Cuautitlán</string>
    <string name="txt_info_name_1">Daniela Zamora Gómez</string>
    <string name="txt_info_tel_1">58725617</string>
    <string name="txt_info_ext_1">4417</string>
    <string name="txt_info_unity_2">Texcoco</string>
    <string name="txt_info_name_2">Rebeca Ruano Gutiérrez</string>
    <string name="txt_info_tel_2">015959522100 </string>
    <string name="txt_info_ext_2">2112</string>
    <string name="txt_info_unity_3">Coacalco</string>
    <string name="txt_info_name_3">Erika Guillén Ibarra</string>
    <string name="txt_info_tel_3">58989500</string>
    <string name="txt_info_ext_3">9501</string>
    <string name="txt_info_unity_4">Tlalnepantla</string>
    <string name="txt_info_name_4">Verónica Gutiérrez Daniel</string>
    <string name="txt_info_tel_4">57269030</string>
    <string name="txt_info_ext_4">2816</string>
    <string name="txt_info_unity_5">Coecillo</string>
    <string name="txt_info_name_5">Victor Valentín Mancera</string>
    <string name="txt_info_tel_5">17222758706</string>
    <string name="txt_info_ext_5">4550</string>
    <string name="txt_info_unity_6">Ciel Norte</string>
    <string name="txt_info_name_6">Guadalupe García González</string>
    <string name="txt_info_tel_6">5565 2880</string>
    <string name="txt_info_ext_6">9908</string>
    <string name="bt_library_energy">Balance Energético</string>
    <string name="bt_library_hydration">Hidratación</string>
    <string name="bt_library_only_once">Infografía</string>
    <string name="bt_library_portfolio">Portafolio</string>
    <string name="bt_library_language">Lenguaje De Negocio</string>
    <string name="bt_library_value_chain">Creer Para Crear</string>
    <string name="bt_library_q_and_a">Q&amp;A</string>
    <string name="bt_library_kof">Historia KOF</string>
    <string name="bt_library_culture">Cultura</string>
    <string name="bt_library_videos">Videos</string>
    <string name="txt_infographics_1">Auxiliar Bodega</string>
    <string name="txt_infographics_2">Vendedor / Ayudante</string>
    <string name="txt_infographics_3">Promotor Mercaderista</string>
    <string name="txt_infographics_4">Preventa</string>
    <string name="txt_video_6">Almacén</string>
    <string name="txt_video_7">Canal Moderno</string>
    <string name="txt_video_8">Distribución</string>
    <string name="txt_video_9">Ventas</string>
    <string-array name="array_checklist_sales">

        <item>Escanear código y saludar al cliente</item>
        <item>Revisar inventarios</item>
        <item>Rellenar y acomodar enfriadores y exhibidores</item>
        <item>Realizar diálogo de “respeto al enfriador”</item>
        <item>Sugerir y elaborar pedido</item>
        <item>Informar y ofrecer promociones y/o lanzamientos</item>
        <item>Generar ticket y confirmarlo con el cliente</item>
        <item>Escuchar y tomar nota de otros requerimientos del cliente</item>
        <item>Despedirse y escanear código a la salida del cliente</item>
        <item>Trasmitir información de pedidos</item>
        <item>Conocer indicadores que se miden en preventa</item>
        <item>Conocer segmentación de portafolio de productos y precios dependiendo los clientes.</item>
        <item>Requerimientos para dar de alta a un cliente nuevo</item>

    </string-array>
    <string-array name="array_checklist_distribution">

        <item>Conocer el proceso de revisión de carga</item>
        <item>Observar la revisión del camión previo a la salida</item>
        <item>Observar el procedimiento de cobro seguro</item>
        <item>Conocer los procedimientos seguros de manejo de carga</item>
        <item>Observar los procedimientos de maniobra en reversa</item>
        <item>Observar el manejo correcto del producto</item>
        <item>Observar el proceso de entrega de envase</item>
        <item>Conocer el proceso de liquidación</item>

    </string-array>
    <string-array name="array_checklist_storage">
        <item>Conocer los roles y principales responsabilidades en la bodega: Auxiliar de Bodega, Montacarguista, Maniobras Generales y Chofer de Patio.</item>
        <item>Conocer el uso y la importancia del equipo de seguridad</item>
        <item>Observar orden y limpieza del almacén</item>
        <item>Aprender el TPM</item>
        <item>Conocer el manejo del producto no conforme</item>
        <item>Conocer en que consiste el proceso de fleteo</item>
        <item>Conocer en que consiste el proceso de carga de rutas</item>
        <item>Observar armado de tarimas estándar y restos</item>
        <item>Conocer los sobrenombres de productos y presentaciones que se usan en bodega</item>
    </string-array>
    <string-array name="array_checklist_service">
        <item>Conocer el proceso del promotor mercaderista en el autoservicio</item>
        <item>Conocer el acomodo de productos en enfriador, anaqueles y exhibiciones</item>
        <item>Aprender la negociación de espacios en el autoservicio</item>
        <item>Observar frenteo, rotación del producto</item>
        <item>Observar la limpieza de productos y anaqueles</item>
    </string-array>
    <string name="txt_q1">¿En qué industria se desarrolla FEMSA?</string>
    <string name="txt_q1_a1">Aeronáutica</string>
    <string name="txt_q1_a2">Bebidas</string>
    <string name="txt_q1_a3">Naval</string>
    <string name="txt_log_lorem">Lorem ipsum dolor sit amet, consectetuer adispiscing elit. Ananean commodo ligula eget dolor. Anananean massa.</string>
</resources>