<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_2">

    <include
        android:id="@+id/header"
        layout="@layout/header_toggle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_info_recomendations"
            style="@style/bt_home"
            android:layout_width="wrap_content"
            android:drawableTop="@drawable/bt_info_recomendations"
            android:tag="1"
            android:onClick="clickSection"
            android:layout_marginBottom="20dp"
            android:text="@string/bt_checklist_info_recomendations"/>

        <Button
            android:id="@+id/bt_info_maps"
            style="@style/bt_home"
            android:layout_width="wrap_content"
            android:drawableTop="@drawable/bt_info_maps"
            android:tag="2"
            android:onClick="clickSection"
            android:layout_marginBottom="20dp"
            android:text="@string/bt_checklist_info_units" />

        <Button
            android:id="@+id/bt_info_units"
            style="@style/bt_home"
            android:layout_width="wrap_content"
            android:drawableTop="@drawable/bt_info_units"
            android:tag="3"
            android:onClick="clickSection"
            android:layout_marginBottom="20dp"
            android:text="@string/bt_checklist_info_maps" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_4"
        android:padding="20dp"
        android:visibility="invisible">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TableRow
                android:background="#ff0000">
                <TextView
                    style="@style/tv_table_info"
                    android:textColor="#FFFFFF"
                    android:text="@string/txt_info_head_1"/>
                <TextView
                    style="@style/tv_table_info"
                    android:textColor="#FFFFFF"
                    android:text="@string/txt_info_head_2"/>
                <TextView
                    style="@style/tv_table_info"
                    android:textColor="#FFFFFF"
                    android:text="@string/txt_info_head_3"/>
                <TextView
                    style="@style/tv_table_info"
                    android:textColor="#FFFFFF"
                    android:text="@string/txt_info_head_4"/>
            </TableRow>

            <TableRow>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_unity_1"/>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_name_1"/>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_tel_1"/>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_ext_1"/>
            </TableRow>

            <TableRow>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_unity_2"/>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_name_2"/>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_tel_2"/>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_ext_2"/>
            </TableRow>

            <TableRow>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_unity_3"/>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_name_3"/>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_tel_3"/>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_ext_3"/>
            </TableRow>

            <TableRow>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_unity_4"/>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_name_4"/>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_tel_4"/>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_ext_4"/>
            </TableRow>

            <TableRow>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_unity_5"/>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_name_5"/>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_tel_5"/>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_ext_5"/>
            </TableRow>

            <TableRow>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_unity_6"/>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_name_6"/>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_tel_6"/>
                <TextView
                    style="@style/tv_table_info"
                    android:text="@string/txt_info_ext_6"/>
            </TableRow>
            
        </TableLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_game_error"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:layout_alignParentRight="true"
            android:onClick="clickHide"/>

    </RelativeLayout>



</RelativeLayout>