<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_6">

    <include
        android:id="@+id/header"
        layout="@layout/header_toggle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"
            android:paddingTop="30dp">

            <Button
                style="@style/bt_gray"
                android:onClick="clickSection"
                android:tag="1"
                android:text="@string/txt_gy_1" />

            <Button
                style="@style/bt_gray"
                android:onClick="clickSection"
                android:tag="2"
                android:text="@string/txt_gy_2" />

            <Button
                style="@style/bt_gray"
                android:onClick="clickSection"
                android:tag="3"
                android:text="@string/txt_gy_3" />

            <Button
                style="@style/bt_gray"
                android:onClick="clickSection"
                android:tag="4"
                android:text="@string/txt_gy_4" />

            <Button
                style="@style/bt_gray"
                android:onClick="clickSection"
                android:tag="5"
                android:text="@string/txt_gy_5" />

            <Button
                style="@style/bt_gray"
                android:onClick="clickSection"
                android:tag="6"
                android:text="@string/txt_gy_6" />

            <Button
                style="@style/bt_gray"
                android:onClick="clickSection"
                android:tag="7"
                android:text="@string/txt_gy_7" />

            <Button
                style="@style/bt_gray"
                android:onClick="clickSection"
                android:tag="8"
                android:text="@string/txt_gy_8" />

            <Button
                style="@style/bt_gray"
                android:onClick="clickSection"
                android:tag="9"
                android:text="@string/txt_gy_9" />

            <Button
                style="@style/bt_gray"
                android:onClick="clickSection"
                android:tag="10"
                android:text="@string/txt_gy_10" />

            <Button
                style="@style/bt_gray"
                android:onClick="clickSection"
                android:tag="11"
                android:text="@string/txt_gy_11" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/rl_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88FFFFFF"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/img_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/icon_game_error"
            android:onClick="clickHide" />

    </RelativeLayout>


</RelativeLayout>