<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#CC000000"
    android:layout_width="500dp"
    android:padding="10dp"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_instructions_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_instructions"/>

    <TextView
        android:id="@+id/txt_instructions_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/txt_log_lorem" />

    <Button
        android:id="@+id/bt_instructions"
        style="@style/bt_red"
        android:layout_gravity="center"
        android:onClick="clickStart"
        android:text="@string/bt_start"/>

</LinearLayout>