<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_2">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/image_map" />

    <ImageView
        android:id="@+id/img_map_path_default"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/image_map_status_0" />

    <ImageView
        android:id="@+id/img_map_path"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <include
        android:id="@+id/header"
        layout="@layout/header_map" />

    <LinearLayout
        android:id="@+id/ll_map_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#88000000"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_map_checklist"
            style="@style/bt_map"
            android:drawableLeft="@drawable/bt_map_checklist"
            android:tag="1"
            android:onClick="clickSection"
            android:text="@string/bt_map_checklist"/>

        <Button
            android:id="@+id/bt_map_feedback"
            style="@style/bt_map"
            android:drawableLeft="@drawable/bt_map_feedback"
            android:tag="2"
            android:onClick="clickSection"
            android:text="@string/bt_map_feedback"/>

        <Button
            android:id="@+id/bt_map_top10"
            style="@style/bt_map"
            android:drawableLeft="@drawable/bt_map_top10"
            android:tag="3"
            android:onClick="clickSection"
            android:text="@string/bt_map_top10"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_map_evaluation"
            style="@style/bt_map"
            android:drawableLeft="@drawable/bt_map_evaluation"
            android:tag="4"
            android:onClick="clickSection"
            android:text="@string/bt_map_evaluation"/>

        <Button
            android:id="@+id/bt_map_game"
            style="@style/bt_map"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/bt_map_game"
            android:tag="5"
            android:onClick="clickSection"
            android:text="@string/bt_map_game"/>


    </LinearLayout>

</RelativeLayout>