<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/header"
        layout="@layout/header_toggle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">

            <Button
                style="@style/bt_infografics"
                android:id="@+id/bt_infographics_1"
                android:tag="1"
                android:onClick="clickSection"
                android:text="@string/txt_infographics_1" />

            <Button
                style="@style/bt_infografics"
                android:id="@+id/bt_infographics_2"
                android:tag="2"
                android:onClick="clickSection"
                android:text="@string/txt_infographics_2" />

            <Button
                style="@style/bt_infografics"
                android:id="@+id/bt_infographics_3"
                android:tag="3"
                android:onClick="clickSection"
                android:text="@string/txt_infographics_3" />

            <Button
                android:id="@+id/bt_infographics_4"
                style="@style/bt_infografics"
                android:tag="4"
                android:onClick="clickSection"
                android:text="@string/txt_infographics_4" />

        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_pdf"
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55FFFFFF"
        android:padding="20dp"
        android:visibility="invisible">

        <com.joanzapata.pdfview.PDFView
            android:id="@+id/pdf_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_game_error"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentRight="true"
            android:onClick="clickHidePdf"/>

    </RelativeLayout>

</RelativeLayout>